Added white color to labels

--- a/index.html
+++ b/index.html
@@ -17096,6 +17096,7 @@
       text-overflow: ellipsis;
       overflow: hidden;
       white-space: nowrap;
+	color:white;
     }
 
     .footer-button__invite-icon {
